first commit bottom buttons done (only ui)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DigiTracker</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="network">Network</string>
+    <string name="lock_app">Lock apps</string>
+    <string name="setting">Setting</string>
 </resources>
